# stock-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
stock_mcp/: server.py
